# personal-py

./: pyproject.toml
src/personal_py/components/: master_decorators_from_scratch.ipynb
tests/features/: example.feature  temp.yaml
