[project]
name = "my-cool-project"
version = "0.1.0"
description = "A very cool Python project."
authors = [
    { name = "Your Name", email = "your@email.com" }
]
dependencies = [
    "requests",  # example dependency
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]  # or "setuptools>=61.0", or "flit"
build-backend = "hatchling.build"
